slidesVisible as computed function

--- a/src/main/resources/templates/burger.html
+++ b/src/main/resources/templates/burger.html
@@ -3,6 +3,7 @@
 <head>
     <title>Thymeleaf Knockout Test</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <script src="/static/underscore.string.min.js"></script>
     <script src="/static/jquery.js"></script>
     <script src="/static/knockout-latest.js"></script>
     <script src="/static/app.js"></script>
